# k3s-coreos

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  conftest.py  create-iso  create-iso.sh  pyproject.toml  run_tests.py
src/: __init__.py  controller.py  create_iso.py  models.py  views.py
src/resources/: server.bu
tests/: __init__.py  test_controller.py  test_models.py  test_views.py
